# ninjatrader-bot

./: .env.example  .gitignore  CLAUDE.md  NINJATRADER_PLAYBOOK.md  RUNPOD_TRAINING_STATUS.md  TRAINING_REPORT.md  pyproject.toml  requirements-train.txt
agents/: live_trading_agent.md
data/: TRADING_STRATEGIES_FROM_VIDEOS.md  all_video_transcripts.json  batch_transcripts.json  trading_transcripts.json
knowledge/reference/: key_concepts.md
knowledge/setups/: live_trading_checklist.md
knowledge/strategies/: 4hour_range_scalp.md  candle_range_theory.md  order_blocks.md  smc_reversals.md  (+2 more)
models/: TRAINING_ANALYSIS_REPORT.md  aggressive_summary.json  feature_analysis.json  quick_variations_summary.json  timeframe_analysis.json  ultra_fast_summary.json
scripts/: aggressive_train.py  analyze_features.py  analyze_shorts.py  analyze_timeframe.py  audio_alerts.py  backtest.py  backtest_comprehensive.py  backtest_crt_cisd.py  backtest_fast.py  check_progress.py  cisd_stats.py  discovered_strategies.py  fast_train.py  fetch_free_data.py  fetch_tradovate_data.py  generate_sample_data.py  live_signal_watcher.py  master_train.py  monitor_training.py  paper_trade.py  parallel_train.py  predict.py  predict_long_only.py  quick_variations.py  run_backtest.py  run_bot.py  runpod_scaling_backtest.py  runpod_train.sh  session_analysis.py  smc_analysis.py  test_cisd_all.py  train_30m_optimized.py  train_ml_strategy.py  train_production_60m.py  train_video_strategies.py  ultra_fast_train.py  validate_and_optimize.py
src/: __init__.py  bot.py  config.py
tests/: test_backtesting.py
(+35 files in other folders)
